# jazn_latka_master

./: .gitattributes  .gitignore  AGENTS.chatgpt.md  AGENTS.codex.md  AGENTS.lmstudio.md  AGENTS.md  AGENTS.ollama.md  JAZN_v15.0.3.3_SELF_CONFIG_COMPATIBILITY_REPORT.txt  PACKAGE_INTEGRITY_MANIFEST.json  README.md  SOURCE_PROVENANCE.json  main.py  pyproject.toml  requirements.txt  run.py
.archives/: apply-memory-rebuild-v240204.trigger
.github/: package-generator-v82-hardening.patch
docs/: MEMORY_RECOVERY_V151.md
latka_jazn/: __init__.py  bridge_secure_gateway.py  cli.py  config.py  version.py
latka_jazn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  jazn_pack_generator_7.0.dashboard_pack_test.py  jazn_pack_generator_7.0.ui_contract_test.py  test_cli_progress_system.py  test_code_health_regressions.py  test_full_canon_model_context.py  test_html_memory_ingest.py  test_jazn_pack_generator_v82_contract.py  test_jazn_pack_generator_v82_dashboard.py  test_jazn_pack_generator_v83_contract.py  test_memory_large_validation.py  test_memory_rebuild_after_two_test.py  test_memory_rebuild_dialogue_context_followup.py  test_memory_rebuild_tool.py  test_memory_recovery_pipeline_v151.py  test_memory_restore_tool.py  test_ollama_only_hotfix.py  test_ollama_probe_v151.py  test_ollama_turn_stability_nlp.py  test_package_generator_release_version.py  test_package_integrity_canonical_worktree.py  test_private_memory_validation_empty_collection_contract.py  test_private_memory_validation_script_contract.py  test_readiness_contract.py  test_release_hardening_active_contracts.py  test_release_metadata_canonical_git.py  test_release_staging_batch_streaming.py  test_release_workflow_hardening.py  test_runtime_owned_agent_boundaries.py  test_runtime_stability_daemon_status.py  (+28 more)
(+543 files in other folders)
