[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latka-jazn"
dynamic = ["version"]
description = "System Jaźni - Łatka"
requires-python = ">=3.12"
dependencies = [
  "py7zr>=0.21.0",
  "pypdf>=5.0.0",
  "tzdata>=2024.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = ["--strict-markers"]
markers = [
  "unit: isolated deterministic unit test",
  "integration: integration test across runtime components",
  "windows: Windows-specific behavior or PowerShell contract",
  "mcp: Model Context Protocol contract test",
  "network: test that may require network access",
  "live_model: live model adapter test requiring explicit credentials",
  "live_mcp: live Secure MCP Tunnel test requiring explicit credentials",
  "private_data: test using private-data export or redaction fixtures",
  "security: security boundary regression test",
  "slow: intentionally slow release or soak test",
]

[project.optional-dependencies]
polish-nlp = [
  "spacy>=3.7,<3.9",
  "morfeusz2>=1.99.15",
  "stanza>=1.8",
  "transformers>=4.40",
  "accelerate>=0.30",
  "torch>=2.2",
  "datasets>=2.19",
  "sentencepiece>=0.2",
  "tokenizers>=0.19",
  "rapidfuzz>=3.9",
  "orjson>=3.10",
  "pydantic>=2.7",
  "requests>=2.31",
  "diskcache>=5.6",
  "conllu>=4.5",
  "networkx>=3.2",
  "language-tool-python>=2.8",
]

[tool.setuptools.dynamic]
version = {attr = "latka_jazn.version.DISTRIBUTION_VERSION"}

[tool.setuptools.packages.find]
where = ["."]
include = ["latka_jazn*"]
exclude = ["memory*", "workspace_runtime*", "status*", "reports*", "requests*", "responses*", "processed*", "tests*", "tools*", "docs*"]
namespaces = false
